# chip8-c

./: .clang-format  README.md  meson.build
front/: front.c  main.c  meson.build
include/: chip8.h  disasm.h
src/: chip8.c  defs.h
